--- a/complete_state.html
+++ b/complete_state.html
@@ -2,67 +2,82 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap" rel="stylesheet">
-  <title>Interactive card details form</title>
-  <link rel="stylesheet" href="style2.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap" rel="stylesheet">
+    <title>Interactive card details form</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
 
-  <div class="container">
-    <div class="leftBox">
-        <div class="card1">
-          <div class="icon">
-            <svg width="84" height="47" fill="none" xmlns="http://www.w3.org/2000/svg"><ellipse cx="23.478" cy="23.5" rx="23.478" ry="23.5" fill="#fff"/><path d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z" stroke="#fff"/></svg>
-          </div>
-          <div class="num">
-            <p id="n1">9591</p>
-            <p id="n2">6489</p>
-            <p id="n3">6389</p>
-            <p id="n4">1011</p>
-          </div>
-          <div class="info">
-            <div class="name">
-              <p>FELICIA LEIRE</p>
+    <div class="container">
+        <div class="leftBox">
+            <div class="card1">
+                <div class="icon">
+                    <svg width="84" height="47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="23.478" cy="23.5" rx="23.478" ry="23.5" fill="#fff" />
+                        <path
+                            d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z"
+                            stroke="#fff" />
+                    </svg>
+                </div>
+                <div class="num">
+                    <p id="n1">9591</p>
+                    <p id="n2">6489</p>
+                    <p id="n3">6389</p>
+                    <p id="n4">1011</p>
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <p>FELICIA LEIRE</p>
+                    </div>
+                    <div class="expdate">
+                        <p>09/26</p>
+                    </div>
+                </div>
             </div>
-            <div class="expdate">
-              <p>09/26</p>
+            <div class="card2">
+                <div class="back-card-num">
+                    <p>123</p>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="card2">
-          <div class="back-card-num">
-            <p>123</p>
-          </div>
-        </div>
-      </div>
         <div class="rightBox">
             <div class="content">
-                <svg width="80" height="80" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="40" cy="40" r="40" fill="url(#a)"/><path d="M28 39.92 36.08 48l16-16" stroke="#fff" stroke-width="3"/><defs><linearGradient id="a" x1="-23.014" y1="11.507" x2="0" y2="91.507" gradientUnits="userSpaceOnUse"><stop stop-color="#6348FE"/><stop offset="1" stop-color="#610595"/></linearGradient></defs></svg>
+                <svg width="80" height="80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="40" cy="40" r="40" fill="url(#a)" />
+                    <path d="M28 39.92 36.08 48l16-16" stroke="#fff" stroke-width="3" />
+                    <defs>
+                        <linearGradient id="a" x1="-23.014" y1="11.507" x2="0" y2="91.507"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#6348FE" />
+                            <stop offset="1" stop-color="#610595" />
+                        </linearGradient>
+                    </defs>
+                </svg>
                 <div class="show-text">
-                <h2>THANK YOU !</h2>
-                <p>We've added your card details</p>
-            </div>
-                <input type="button" value="Continue">
+                    <h2>THANK YOU !</h2>
+                    <p>We've added your card details</p>
+                </div>
+                <button><a href="#">Continue</a></button>
             </div>
         </div>
-      </form>
+        </form>
     </div>
-  </div>
+    </div>
 
 
-  <!-- <div class="attribution">
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     
-    Coded by <a href="#">Your Name Here</a>. -->
-  </div>
+    Coded by <a href="#">Ganesh Ghodke</a>.
+  </div> -->
 </body>
 
 </html>
